--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,9 +9,14 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #ffffff;
     --foreground: #ededed;
   }
+}
+
+html {
+  width: 100vw;
+  height: 100%;
 }
 
 body {
@@ -19,3 +24,8 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+/* html,
+body {
+  cursor: url("/assets/mouse/pencil.cur");
+} */
